--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "@babel/core": "^7.9.6",
     "@babel/preset-env": "^7.9.6",
     "eslint": "^6.8.0",
+    "eslint-config-airbnb-base": "^14.1.0",
+    "eslint-plugin-import": "^2.20.2",
     "eslint-plugin-react": "^7.19.0"
   },
   "dependencies": {
